# expense-tracker

./: .gitignore  pyproject.toml
.streamlit/: secrets-example.toml
src/expense_tracker/: app.py  dummy_data.py  storage.py
src/expense_tracker/cloud/: __init__.py  base.py  s3.py
src/expense_tracker/page/analysis_page/: __init__.py  main.py
src/expense_tracker/page/edit_data_page/: __init__.py  main.py
src/expense_tracker/page/example_page/: __init__.py  main.py
src/expense_tracker/page/settings_page/: __init__.py  main.py
src/expense_tracker/page/splitting_page/: __init__.py  main.py
src/expense_tracker/page/upload_page/: __init__.py  main.py
